--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ xcuserdata/
 #
 # Pods/
 
+ZLBaseProject/Pods/
+
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
