添加  一些数据结构

--- a/ZLBaseProject/Podfile
+++ b/ZLBaseProject/Podfile
@@ -30,7 +30,7 @@ target 'ZLBaseProject' do
 #    pod 'FMDB', '~> 2.6'
 #    pod 'JSPatch', '~> 1.1.2'
 #    
-    pod 'JSONModel', '~> 1.7.0'
+#    pod 'JSONModel', '~> 1.7.0'
     pod 'YYModel'
 #    
 #    pod 'SDWebImage', '~> 4.0.0'
