--- a/ZLBaseProject/Podfile
+++ b/ZLBaseProject/Podfile
@@ -17,37 +17,37 @@ target 'ZLBaseProject' do
     
     
     pod 'AFNetworking', '~> 3.0'
-#
-#    pod 'GDataXML-HTML','~> 1.3.0'
-#    pod 'SMPageControl', '~> 1.2'
+    #
+    #    pod 'GDataXML-HTML','~> 1.3.0'
+    #    pod 'SMPageControl', '~> 1.2'
     pod 'Masonry', '~> 1.0.2'
     pod 'UITableView+FDTemplateLayoutCell'
-#    pod 'JazzHands', '~> 2.0.8'
-#    pod 'WebViewJavascriptBridge', '~> 6.0.0'
-#    
-#    pod 'GVUserDefaults', '~> 1.0.2'
-#    
-#    pod 'FMDB', '~> 2.6'
-#    pod 'JSPatch', '~> 1.1.2'
-#    
-#    pod 'JSONModel', '~> 1.7.0'
+    #    pod 'JazzHands', '~> 2.0.8'
+    #    pod 'WebViewJavascriptBridge', '~> 6.0.0'
+    #
+    #    pod 'GVUserDefaults', '~> 1.0.2'
+    #
+    #    pod 'FMDB', '~> 2.6'
+    #    pod 'JSPatch', '~> 1.1.2'
+    #
+    #    pod 'JSONModel', '~> 1.7.0'
     pod 'YYModel'
-#    
+    #
     pod 'SDWebImage', '~> 4.0.0'
-#
-#    pod 'TTTAttributedLabel', '~>2.0.0'
-#    
-#    pod 'SCLAlertView-Objective-C'
-#    pod 'YYKit', '~>1.0.9'
-#    pod 'YYModel'
-#    pod 'YYWebImage'
-#    
+    #
+    #    pod 'TTTAttributedLabel', '~>2.0.0'
+    #
+    #    pod 'SCLAlertView-Objective-C'
+    #    pod 'YYKit', '~>1.0.9'
+    #    pod 'YYModel'
+    #    pod 'YYWebImage'
+    #
     pod 'YYCategories'
-
-#    pod 'SVProgressHUD'
-#    
-#    pod 'YYWebImage'
-
+    
+    #    pod 'SVProgressHUD'
+    #
+    #    pod 'YYWebImage'
+    
     pod 'CocoaLumberjack'
     
     pod 'MJRefresh', '~> 3.1.12'
@@ -57,6 +57,8 @@ target 'ZLBaseProject' do
     # util kit
     pod 'BlocksKit'
     
-
+    # Third part
+    pod 'WeChat_SDK'
+    
     
 end
