--- a/ZLBaseProject/ZLBaseProject/Info.plist
+++ b/ZLBaseProject/ZLBaseProject/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>应用需要访问相机</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>应用需要访问地理位置</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>应用需要访问相册</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
